--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
+    "http-proxy-middleware": "^2.0.6",
     "json2csv": "^5.0.7",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
