--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,13 @@
     "bcrypt": "^5.0.1",
     "cheerio": "^1.0.0-rc.12",
     "connect-mongo": "^3.2.0",
+    "connect-redis": "^7.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.3",
     "http-proxy-middleware": "^2.0.6",
     "json2csv": "^5.0.7",
     "mongodb": "^3.6.5",
@@ -28,6 +29,7 @@
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.5",
     "validator": "^13.6.0"
   },
   "repository": {
