--- a/backend/package.json
+++ b/backend/package.json
@@ -23,12 +23,14 @@
     "express-session": "^1.17.3",
     "http-proxy-middleware": "^2.0.6",
     "json2csv": "^5.0.7",
+    "moment": "^2.29.4",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "qs": "^6.11.1",
     "redis": "^4.6.5",
     "validator": "^13.6.0"
   },
