--- a/vercel.json
+++ b/vercel.json
@@ -8,17 +8,14 @@
       {
         "src": "client/package.json",
         "use": "@vercel/static-build",
-        "config": { "distDir": "client/build" }
+        "config": { "distDir": "build" }
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "backend/server.js"
-      },
-      {
         "src": "/(.*)",
-        "dest": "client/build/$1"
+        "dest": "/backend/server.js"
       }
     ]
   }
+  
