--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "cross-env CI=false react-scripts build",
-    "postbuild": "mv build/index.html build/app.js && mv build/landing.ejs build/index.html",
+    "postbuild": "mv build/index.html build/app.html && mv build/landing.ejs build/index.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
