--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "build": "cross-env CI=false react-scripts build",
     "postbuild": "mv build/index.html build/app.html && mv build/landing.ejs build/index.html",
     "test": "react-scripts test",
+    "purgecss": "purgecss -c ./purgecss.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,6 +43,18 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "purgecss": "^5.0.0",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.1.0"
+  },
+  "purgecss": {
+    "content": [
+      "./src/**/*.js",
+      "./public/index.html"
+    ],
+    "css": [
+      "./build/**/*.css"
+    ]
   }
 }
