--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.12",
     "connect-mongo": "^3.2.0",
     "connect-redis": "^7.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
