--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,14 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      
-      "src": "backend/package.json", 
-      "use": "@vercel/node",
-      "config": {
-        
-        "includeFiles": ["backend/views/**"]
-      }
-    },
-    {
-      
-      "src": "client/package.json", 
-      "use": "@vercel/static-build", 
-      "config": {
-        
-        "distDir": "build"
-      }
-    }
-  ],
-  "rewrites": [
-    
-    { "source": "/login", "destination": "/backend/server.js" }, 
-    { "source": "/signup", "destination": "/backend/server.js" }, 
-    { "source": "/logout", "destination": "/backend/server.js" },
-    { "source": "/race(/.*)?", "destination": "/backend/server.js" }
+  "files": {
+    "main.css": "/static/css/main.d8245119.css",
+    "main.js": "/static/js/main.42800d0f.js",
+    "index.html": "/index.html",
+    "main.d8245119.css.map": "/static/css/main.d8245119.css.map",
+    "main.42800d0f.js.map": "/static/js/main.42800d0f.js.map"
+   },
   
-
-    ]
+  "entrypoints": [
+    "static/css/main.d8245119.css",
+    "static/js/main.42800d0f.js"
+  ]
 }
