--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,20 @@
 {
-  "files": {
-    "main.css": "/static/css/main.d8245119.css",
-    "main.js": "/static/js/main.42800d0f.js",
-    "index.html": "/index.html",
-    "main.d8245119.css.map": "/static/css/main.d8245119.css.map",
-    "main.42800d0f.js.map": "/static/js/main.42800d0f.js.map"
-   },
-  
-  "entrypoints": [
-    "static/css/main.d8245119.css",
-    "static/js/main.42800d0f.js"
-  ]
-}
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/backend/server.js"
+       }
+     ]
+    }
